# FastTeleMail

./: .env_sample  README.md  pyproject.toml
src/: __init__.py  celery_app.py  config.py  database.py  main.py
src/migrations/: env.py
src/migrations/versions/: cd4fdff0b991_.py
src/notifications/: db.py  email_sender.py  models.py  router.py  schemas.py  services.py  tasks.py  utils.py
